# sapcli

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  AGENTS.md  CONTRIBUTING.md  Dockerfile  HACKING.md  Makefile  README.md  RELEASING.md  dev-requirements.txt  get_version.sh  mypy.ini  pyproject.toml  requirements.txt  sapcli  sapcli.bat  setup.py
.github/workflows/: python-package.yml
doc/: architecture.md  aunit.md  commands.md  configuration.md
doc/commands/: abap.md  abapgit.md  activation.md  atc.md  aunit.md  authorizations.md  badi.md  bdef.md  bsp.md  businessservice.md  checkout.md  class.md  cts.md  dataelement.md  datapreview.md  dcl.md  ddl.md  domain.md  featuretoggles.md  flp.md  functiongroup.md  functionmodule.md  gcts.md  include.md  interface.md  messageclass.md  odataservice.md  package.md  program.md  srvb.md  srvd.md  startrfc.md  structure.md  strust.md  table.md  transaction.md  user.md
plugins/auth/: basic-auth-cookies.py
sap/: __init__.py  config.py  errors.py
sap/adt/: __init__.py  abapgit.py  acoverage.py  acoverage_statements.py  annotations.py  apirelease.py  atc.py  aunit.py  authorization_field.py  behaviordefinition.py  businessservice.py  checks.py  common_types.py  core.py  cts.py  dataelement.py  datapreview.py  domain.py  enhancement_implementation.py  errors.py  featuretoggle.py  function.py  marshalling.py  messageclass.py  object_factory.py  objects.py  odataservice.py  package.py  programs.py  repository.py  search.py  structure.py  system.py  table.py  transaction.py  uri.py  wb.py  whereused.py
sap/cli/: __init__.py  (+50 more)
(+226 files in other folders)
